# Advanced-Programming-Taxi-Center

./: CMakeLists.txt  DriverFlow.cpp  DriverFlow.h  TaxiCenterFlow.cpp  TaxiCenterFlow.h  client.out  log.txt  makefile  server.out  server.txt
comunication/: Client.cpp  Client.h  DriverProtocol.cpp  DriverProtocol.h  Protocol.h  Server.cpp  Server.h  Socket.cpp  Socket.h  TaxiCenterProtocol.cpp  TaxiCenterProtocol.h  Tcp.cpp  Tcp.h  Udp.cpp  Udp.h
cpp/src/: DriverFlow.cpp  TaxiCenterFlow.cpp
cpp/src/Navigation/: Point.h
cpp/src/Taxi-Center/: TaxiCenter.cpp
cpp/src/comunication/: GuiProtocol.cpp  GuiProtocol.h
cpp/src/general/: Parser.cpp
src/: AvaliableNotifier.h  Bfs.cpp  CommunicatorListener.cpp  CommunicatorListener.h  Comunicator.cpp  Comunicator.h  Driver.cpp  Driver.h  DriverFlow.cpp  DriverFlow.h  DriverInfo.cpp  DriverInfo.h  DriverProtocol.cpp  DriverProtocol.h  Flow.cpp  Flow.h  LuxTaxi.h  Map.cpp  Map.h  Parser.cpp  Parser.h  Protocol.h  Taxi.cpp  Taxi.h  TaxiCenter.cpp  TaxiCenter.h  TaxiCenterFlow.cpp  TaxiCenterFlow.h  ThreadPool.cpp  ThreadPool.h  Trip.cpp  Trip.h  client.cpp  client.h  main.cpp  udp_server2.cpp
src/Navigation/: Bfs.cpp  Map.cpp  Map.h  Trip.cpp  Trip.h
src/Taxi-Center/: TaxiCenter.cpp  TaxiCenter.h
src/comunication/: Server.h  TaxiCenterProtocol.h
src/general/: Parser.h  ThreadPool.cpp
